--- a/t/th/the/thecargames.org.html
+++ b/t/th/the/thecargames.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thecargames.org privacy policy that was archived on 2013-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131208012405id_/http%3A//www.thecargames.org/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecargames.org privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223034832id_/http%3A//www.thecargames.org/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -120,67 +120,58 @@ Try these exciting <b>car games</b> to get your adrenaline pumping! Strap yourse
 <div style="float:right;width:754px;background:#d92b2b;overflow:hidden;border-left:1px dotted #08969d">
 <div style="padding:10px;font-size:15px;color:white">
 
-Privacy Policy for www.thecargames.org<br><br>
-
-If you require any more information or have any questions about our
-privacy policy, please feel free to contact us by email at
-playgamesnetwork@gmail.com.
-<br><br>
-At www.thecargames.org, the privacy of our visitors is of extreme
-importance to us. This privacy policy document outlines the types of
-personal information is received and collected by www.thecargames.org
-and how it is used.
-<br><br>
-Log Files
-Like many other Web sites, www.thecargames.org makes use of log files.
-The information inside the log files includes internet protocol (IP)
-addresses, type of browser, Internet Service Provider (ISP), date/time
-stamp, referring/exit pages, and number of clicks to analyze trends,
-administer the site, track user’s movement around the site, and gather
-demographic information. IP addresses, and other such information are
-not linked to any information that is personally identifiable.
-<br><br>
-Cookies and Web Beacons
-www.thecargames.org does not use cookies.
-<br><br>
-DoubleClick DART Cookie
-.:: Google, as a third party vendor, uses cookies to serve ads on
-www.thecargames.org.
-.:: Google's use of the DART cookie enables it to serve ads to users
-based on their visit to www.thecargames.org and other sites on the
-Internet.
-.:: Users may opt out of the use of the DART cookie by visiting the
-Google ad and content network privacy policy at the following URL -
-http://www.google.com/privacy_ads.html
-
-Some of our advertising partners may use cookies and web beacons on
-our site. Our advertising partners include ....
-Google Adsense
-<br><br>
-
-These third-party ad servers or ad networks use technology to the
-advertisements and links that appear on www.thecargames.org send
-directly to your browsers. They automatically receive your IP address
-when this occurs. Other technologies (such as cookies, JavaScript, or
-Web Beacons) may also be used by the third-party ad networks to
-measure the effectiveness of their advertisements and / or to
-personalize the advertising content that you see.
-<br><br>
-www.thecargames.org has no access to or control over these cookies
-that are used by third-party advertisers.
-<br><br>
-You should consult the respective privacy policies of these
-third-party ad servers for more detailed information on their
-practices as well as for instructions about how to opt-out of certain
-practices. www.thecargames.org's privacy policy does not apply to, and
-we cannot control the activities of, such other advertisers or web
-sites.
-<br><br>
-If you wish to disable cookies, you may do so through your individual
-browser options. More detailed information about cookie management
-with specific web browsers can be found at the browsers' respective
-websites.
-<br><br>
+<b>PRIVACY POLICY</b><br><br>
+This privacy policy (hereafter referred to as the "Privacy Policy") is applicable to our websites and to all games and other activities that are offered through our websites. (Our websites, all the web pages that are part of the websites, and such games and activities are hereafter collectively referred to as the "Websites.") Playgame Network, (hereafter referred to as "PGN"), may use affiliates' or reputable 3rd parties' services for the processing of personal data collected on or through the Websites. By using or accessing our Websites, you are accepting the practices described in this Privacy Policy.
+<br><br>1.&nbsp;&nbsp;About Our Websites
+<br>1.1&nbsp;&nbsp;&nbsp; Our Websites offer online games created by independent developers and PGN partners. Players can access our Websites to play games without registering; however, they may choose to register to create a public or semi-public profile and to comment on games. Also, visitors to the Websites will be able to hear about newly added games.
+<br>2.&nbsp;&nbsp;The Information We Collect
+<br>The information that our Websites collect includes (among others) the following:
+<br>a)&nbsp;&nbsp;&nbsp;&nbsp;IP address, Cookies, and Web Beacons
+<br><br>2.1&nbsp;&nbsp;&nbsp; When you visit our Websites, our servers automatically save your computer's IP address. IP addresses will be collected, along with information about the actual web pages that you visit on the Websites. If you arrive at the Websites via a link from another website, the URL of the linking website and the URL of any website that you link to next will also be collected.
+<br><br>2.2&nbsp;&nbsp;&nbsp; In addition, we store certain information from your browser, using "cookies." A cookie is a piece of data stored on the user's computer and is tied to information about the user. PGN may use cookies, web beacons (web bugs), or similar technologies to enhance and personalize your experience on the Websites, including the following:
+<br>(a) to operate and improve offerings on the Websites;
+<br>(b) to help authenticate you when you are on the Websites;
+<br>(c) to remember your preferences and registration information, as applicable;
+<br>(d) to present and help measure and research the effectiveness of PGN's offerings, advertisements, and email communications; and
+<br>(e) to customize the content and advertisements provided to you through the Websites.
+<br><br>2.3&nbsp;&nbsp;&nbsp; PGN may also use ad network providers to help present ads on the Websites. These ad network providers use cookies, web beacons, or similar technologies to help the presenting, better targeting, and measuring of the effectiveness of their advertisements, using data gathered over time and across their networks of web pages to determine or predict the characteristics and preferences of their audiences. PGN offers some services in connection with other websites. Personal information that you provide to those sites may be sent to PGN in order to deliver these services. PGN processes such information in accordance with this Privacy Policy.
+<br><br>2.4&nbsp;&nbsp;&nbsp; PGN may also use 3rd party payment service providers ("PSP"), offering payment transaction services to PGN in order to sell a product or service through the Websites. Whenever you buy something from the Websites (e.g., a subscription for a game download), the information that you provide to the PSP is subject to their privacy policies, not ours. You explicitly consent that PGN may provide personal information collected from you to a PSP for the purpose of the offering of the payment-transaction service whenever you buy something from the Website(s) and that such PSP may use such data for (statistical) analysis of payment transactions. PGN shall be allowed to notify a PSP regarding a user that engages in (or who a party believes has engaged in) any activity that is illegal, that violates any person's rights, or that led to such user's suspension or termination of use of the Websites.
+<br><br>2.5&nbsp;&nbsp;&nbsp; PGN may share demographic information (certain anonymous information about you as a user, such as age and country) with certain ad network providers to help them deliver more relevant ads through their ad networks. The use of cookies, web beacons, or similar technologies by such third parties as ad network providers is subject to their own privacy policies, not this Privacy Policy.
+<br><br>2.6&nbsp;&nbsp;&nbsp; Most browsers are initially set to accept cookies, but you can (re)set your browser to refuse all cookies, or to indicate when a cookie is sent. You can opt out of receiving cookies from certain 3rd party advertising networks by resetting your browser. 
+<br>b)&nbsp;&nbsp;&nbsp;&nbsp;Personal Data, Including Your E-mail Address
+<br><br>2.7&nbsp;&nbsp;&nbsp; You may choose to register with us for a better game experience and/or to create a public or semi-public profile for participating in our social gaming network. This includes, for example: individual game recommendations on the Websites. When you register with us, you provide us with certain personal information, such as a username, date and month of birth, and your email address. The information you disclose in that respect may also become publicly accessible. We provide you with privacy settings that restrict other users from accessing your information; namely, our network architecture and your privacy settings allow you to make informed choices about who has access to your information. We allow you to choose the information you provide to friends and networks through our Websites. When your privacy settings permit it, other users may be able to see and supplement your profile (e.g., by posting comments).
+<br><br>2.8&nbsp;&nbsp;&nbsp; If you decide to disclose information in a public venue or in games, we will consider that information as part of the public domain. This information will be accessible to any person who uses the Websites.
+<br><br>2.9&nbsp;&nbsp;&nbsp; We only collect email addresses that were provided to us directly by you. Your email address will only be used for the following purposes:
+<br>(i) the promotion of (new) games;
+<br>(ii) service emails (on updates, new design, new features, etc.);
+<br>(iii) administrative purposes, such as notification of violation of our&nbsp;Terms of Use;
+<br>(iv) delivering messages you have allowed us to pass on (e.g., from other people in your social network).
+<br><br>2.10&nbsp; Without your approval, we will not:
+<br>(a) make your email address visible on the Website;
+<br>(b) use your email address for purposes other than those described in article 2.9 hereof;
+<br>(c) transfer your email address or other personal information to third parties, except in those limited cases as described in this Privacy Policy.
+<br>c)&nbsp;&nbsp;&nbsp;&nbsp;Combination of Personal Data
+<br><br>2.11&nbsp; For optimizing our services and the Websites, and for the purposes mentioned in this article 2, we are entitled to combine your personal data (including your email address, as applicable) with other information about you collected by or provided to us.
+<br><br>3.&nbsp;&nbsp;To Whom Does PGN Provide This Information?
+<br><br>3.1&nbsp;&nbsp;&nbsp; PGN may provide information to any party whose services it engages for the purposes of its normal operations (for example, those partners who assist us by providing technical or operational facilities for the Websites and so forth). We may also supply information to other parties if we are required to do so by law or by a ruling handed down by a court of law. PGN doesn’t provide personal details to other parties for commercial, advertising, or marketing purposes, except if you explicitly give us permission to do so, or if doing so is part of a specific program or operation for which you have registered. In such case, you may withdraw your permission at any time.
+<br><br>4.&nbsp;&nbsp;Why Do We Collect Information?
+<br><br>4.1&nbsp;&nbsp;&nbsp; We use personal details and other information to maintain the general and personified content and functionality of the Websites. In addition, we use personal details to make it possible to accommodate your requests, and so that we are able to provide you with service when using (one of) our Websites and for the purposes set out elsewhere in this Privacy Policy.
+<br><br>5.&nbsp;&nbsp;Access to the Information We Have Collected about You
+<br><br>5.1&nbsp;&nbsp;&nbsp; Your personal data will be stored by PGN.
+<br><br>5.2&nbsp;&nbsp;&nbsp; Users with a personal profile on the Websites may review, update, or delete personal data collected by us by clicking on the appropriate link in the personal profile.
+<br><br>5.3&nbsp;&nbsp;&nbsp; In general, if you wish to have access to your personal data to correct or delete the information that we have collected about you, please send an email to playgamesnetwork@gmail.com, detailing your request and the data you have provided to us along with a copy of your passport (to prevent misuse of requests for information).
+<br><br>5.4&nbsp;&nbsp;&nbsp;&nbsp;Parents of users under the age of 16: If you wish to have access to your child's personal data to view, correct, or delete the information that we have collected about your child, please send an email to playgamesnetwork@gmail.com, detailing your request along with a copy of your passport (to prevent misuse of requests for information).
+<br><br>6.&nbsp;&nbsp;Security
+<br><br>6.1&nbsp;&nbsp;&nbsp; You post personal data and any other content on the Websites at your own risk and in accordance with article 7 ("Your Responsibilities") of the Terms of Use. Although we allow you to set privacy options that limit access to such personal data and other content, please be aware that no security measures are perfect or impenetrable. We cannot control the actions of other users with whom you choose to share your profile and information. Therefore, we cannot and do not guarantee that any content you post on the Websites will not be viewed by unauthorized persons. We are not responsible for circumvention of any privacy settings or security measures contained on the Websites. You understand and acknowledge that, even after removal, copies of personal data or content may remain viewable in cached and archived pages, or if other users have copied or stored your personal data or content.
+<br><br>6.2&nbsp;&nbsp;&nbsp; We have implemented appropriate measures to safeguard and help prevent unauthorized access, to maintain data security, and to correctly use the information we collect online. Your personal data visible on the Websites (such as any public comments posted by you and/or any data in your profile) are accessible to third parties, and you acknowledge and agree that such third parties are able to copy such information to their own websites or other locations.
+<br><br>6.3&nbsp;&nbsp;&nbsp; Your personal data will only be stored for a period necessary for your uses of the Websites for the purposes as described in this Privacy Policy.
+<br><br>7.&nbsp;&nbsp;Miscellaneous
+<br><br>7.1&nbsp;&nbsp;&nbsp; We reserve the right to amend our Privacy Policy. Amendments will be effective as of the moment of publication on the Websites. You should check the Websites regularly for amendments.
+<br><br>7.2&nbsp;&nbsp;&nbsp; The Internet is a global environment, and using the Internet necessarily involves the collection and processing of personal data on an international basis. Therefore, by using (one or more of) our Websites, you acknowledge and agree to our processing of personal data in this way.
+<br><br>7.3&nbsp;&nbsp;&nbsp; Our Websites may contain links to other websites. We are not responsible for the privacy practices of other websites. We encourage users to be aware when they leave our site to read the privacy statements of each and every website that collects personally identifiable information. This Privacy Policy applies solely to information collected by us.
+<br><br>7.4&nbsp;&nbsp;&nbsp; In the event of a transfer of (one of our) Websites to a third party, we may transfer to such third party all personal information that we collected about you in accordance with this Privacy Policy. In such an event, users who have provided email addresses to us will be notified when information about those users is transferred and becomes subject to a different privacy policy.
+<br><br>7.5&nbsp;&nbsp;&nbsp; We also have Terms of Use that are applicable to your use of the Websites. In the case of a contradiction between the Terms of Use and this Privacy Policy, this Privacy Policy prevails.
+<br><br>If you have any additional questions or requests, you may send an email to&nbsp;<b>playgamesnetwork@gmail.com</b>
 
 </div>
 
