--- a/d/do/dow/downloadupdates.com.html
+++ b/d/do/dow/downloadupdates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downloadupdates.com privacy policy that was archived on 2013-09-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130907185223id_/http%3A//www.downloadupdates.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downloadupdates.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223042330id_/http%3A//downloadupdates.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
