--- a/c/co/com/complianceonline.com.html
+++ b/c/co/com/complianceonline.com.html
@@ -1,15 +1,15 @@
-<!--The following is the downloaded HTML source of the complianceonline.com privacy policy that was archived on 2013-10-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131010003557id_/http%3A//www.complianceonline.com/ecommerce/control/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the complianceonline.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223062755id_/https%3A//www.complianceonline.com/ecommerce/control/privacyPolicy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
  <title>Privacy Policy - ComplianceOnline Quality &amp; Compliance Portal</title>
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
  <meta name="description" content="Privacy Policy: Find Industry Best Practices and related information from Compliance Online, a leading Quality and Compliance Portal.">
  <meta name="keywords" content="Privacy Policy, Industry, Best, Practices, Compliance, Online, Quality, Compliance, Portal">
  <meta name="verify-v1" content="inSZ8NGS8FPoLsGJ2Ntf27IC7t1i6uIe9VFMX6lAtfk=">
 
-<link rel="stylesheet" href="http://static.complianceonline.com/images/newUI/css/header_footer_newUI.css"> 
-<link rel="stylesheet" href="http://static.complianceonline.com/images/newUI/css/company_info_newUI.css"> 
+<link rel="stylesheet" href="http://www.complianceonline.com/images/newUI/css/header_footer_newUI.css"> 
+<link rel="stylesheet" href="http://www.complianceonline.com/images/newUI/css/company_info_newUI.css"> 
 </head>
 
 <body>
@@ -19,15 +19,15 @@
 	<div id="top_links"><a href="/">Home</a> | <a href="/ecommerce/control/contactUs">Contact</a></div>		
 	<div id="head_section_body">
 		<div id="logo_container">
-			<a href="/"><img src="http://static.complianceonline.com/images/main/co-grc-logo.png" border="0" alt="ComplianceOnline" title="ComplianceOnline"></a>
+			<a href="/"><img src="http://www.complianceonline.com/images/main/co-grc-logo.png" border="0" alt="ComplianceOnline" title="ComplianceOnline"></a>
 		</div>
 		<div id="head_section_login_wrapper">
 			<p style="color:red;font-size:12px;"></p>
 			<form name="headSectionLoginForm" id="headSectionLoginForm" method="post" onsubmit="return headSectionLoginValidate()" action="/ecommerce/control/newUIDoLogin">
 				<input name="headSectionLoginID" type="text" class="head_section_text_field" id="headSectionLoginID" value="Email ID">
 				<input name="headSectionLoginPassword" type="password" class="head_section_text_field" id="headSectionLoginPassword" value="Password">
-				<input type="image" name="headSectionLogin" id="headSectionLogin" src="http://static.complianceonline.com/images/newUI/images/login-btn.gif">
-				<a href="/ecommerce/control/registration"><img id="headSectionRegister" src="http://static.complianceonline.com/images/newUI/images/reg-btn.gif" width="75" height="19" border="0" alt="Register"></a>
+				<input type="image" name="headSectionLogin" id="headSectionLogin" src="http://www.complianceonline.com/images/newUI/images/login-btn.gif">
+				<a href="/ecommerce/control/registration"><img id="headSectionRegister" src="http://www.complianceonline.com/images/newUI/images/reg-btn.gif" width="75" height="19" border="0" alt="Register"></a>
 			 	
 			 	<input type="hidden" name="USERNAME" id="USERNAME" value="">
 			 	<input type="hidden" name="PASSWORD" id="PASSWORD" value="">			 	
@@ -89,7 +89,7 @@
 				<li><a href="/ecommerce/control/industryHome/~catId=5055/~Recalls_and_Crisis_Management">Recalls &amp; Crisis Management</a></li>	  
 			</ul> 
 			
-			<ul style="margin:0px; padding-left:10px;">				
+			<ul style="padding-left:7px;">				
 				<li><span><a style="text-decoration:none;">CROSS INDUSTRY FUNCTIONS</a></span></li>
 				<li><a href="/ecommerce/control/industryHome/~catId=30011/~Corporate_Governance">Corporate Governance</a></li>
 				<li><a href="/ecommerce/control/industryHome/~catId=10014/~IT_and_PCI_compliance">IT and PCI compliance</a></li>
@@ -100,8 +100,8 @@
 				<li><a href="/ecommerce/control/industryHome/~catId=10013/~Trade_and_Logistics">Trade And Logistics</a></li>
 			</ul>				
 			<ul style="margin:0px;padding:0px">
-				<li><a href="/ecommerce/control/seminar?product_id=80129SEM&amp;channel=bnr_CO_Ind_mnu"><img src="http://static.complianceonline.com/images/newUI/images/Risk-Management-Seminar.jpg" alt="Risk Management Seminar" width="130" height="204" border="0"></a></li>
-			</ul> 
+				<li><a href="/ecommerce/control/seminar?product_id=80145SEM&amp;channel=bnr_CO_Ind_mnu"><img src="http://static.complianceonline.com/images/newUI/images/130x204-80145SEM.gif" alt="Risk Based Internal Auditing" width="130" height="204" border="0"></a></li>
+			</ul>
 			<div class="clear"></div> 
 		</div></li>
 	
@@ -243,7 +243,7 @@
 	</div>
 	<div class="grBorder"></div>
 	<div class="clear spacer"></div>
-</div>			
+</div>		
 	</div>
 	<div id="footer">
 	<br>	 
@@ -254,58 +254,7 @@
 			<li><a href="/ecommerce/control/copartners">Partners</a></li>
 			<li><a href="/ecommerce/control/contactUs">Contact Us</a></li>
 			<li><a href="/ecommerce/control/testimonials">Testimonials</a></li>
-			<li>
-			<div class="daily-news-digest">
-				<div class="news-digest">
-					<div>
-						<div class="NDLT"></div>
-						<div class="NDT"></div>
-						<div class="NDRT"></div>
-					</div>
-					<div class="NDC">
-						<div class="news-digest-center">
-							<div class="ND-header-bg">Complimentary<br>Daily News Digest </div>
-							<div class="ND-select">
-							<form method="post" action="">
-								<table width="100%" border="0" cellspacing="0" cellpadding="0">
-									<tbody>
-									<tr>
-										<td width="10%"><input name="calendarSelection" type="radio" onclick="go('http://dev.netcontentinc.net/accounts/subscription_form/c6811eae-b312-11e2-8834-00e081d011b9?welcome_email=1')" checked="checked"></td>
-										<td width="21%" class="ND-select-text">Drug</td>
-										<td width="10%"><input name="calendarSelection" type="radio" onclick="go('http://dev.netcontentinc.net/accounts/subscription_form/e7e3b930-b312-11e2-8834-00e081d011b9?welcome_email=1')"></td>
-										<td width="27%" class="ND-select-text">Device</td>
-										<td width="10%"><input name="calendarSelection" type="radio" onclick="go('http://dev.netcontentinc.net/accounts/subscription_form/1c928904-b313-11e2-8834-00e081d011b9?welcome_email=1')"></td>
-										<td width="22%" class="ND-select-text">GRC</td>
-									</tr>
-									<tr>
-										<td><input name="calendarSelection" type="radio" onclick="go('http://dev.netcontentinc.net/accounts/subscription_form/35f5f8fe-b313-11e2-8834-00e081d011b9?welcome_email=1')"></td>
-										<td class="ND-select-text">HR</td>
-										<td><input name="calendarSelection" type="radio" onclick="go('http://dev.netcontentinc.net/accounts/subscription_form/04252386-b313-11e2-8834-00e081d011b9?welcome_email=1')"></td>
-										<td class="ND-select-text">Food</td>
-										<td>&nbsp;</td>
-										<td>&nbsp;</td>
-									</tr>
-									</tbody>
-								</table>    			
-							</form>
-							</div>
-
-							<div class="ND-select-text" style="padding:0 5px 5px 5px;"> Daily News Digest ! Absolutely Free<br>
-								<span>News/best practices collected from 20,000 sources and delivered to your inbox daily</span>
-							</div>
-							<div class="news-digest-center"> 
-								<iframe id="calendar" frameborder="0" width="183" height="85" src="http://dev.netcontentinc.net/accounts/subscription_form/c6811eae-b312-11e2-8834-00e081d011b9?welcome_email=1" scrolling="no"></iframe>
-							</div>           																								  
-						</div>
-					</div>
-					<div>
-						<div class="NDLB"></div>
-						<div class="NDB"></div>
-						<div class="NDRB"></div>
-					</div>
-				</div>
-			</div></li>	
-		</ul>
+					</ul>
 
 		<ul>
 			<li style="line-height:30px;"><u><strong>Industries</strong></u></li>
@@ -372,7 +321,7 @@
 		<div class="clear"></div>
 		<br><br><br>
 		<div id="copyright_container">
-			<div id="copyright">Copyright © 2013 ComplianceOnline.com &nbsp; &nbsp; <a href="http://www.metricstream.com/" target="_blank"><img src="http://static.complianceonline.com/images/newUI/images/metricstream-logo.jpg" alt="MetricStream" width="170" border="0" height="21" id="MS_logo"></a></div>
+			<div id="copyright">Copyright © 2014 ComplianceOnline.com &nbsp; &nbsp; <a href="http://www.metricstream.com/" rel="nofollow" target="_blank"><img src="http://www.complianceonline.com/images/newUI/images/metricstream-logo.jpg" alt="MetricStream" width="170" border="0" height="21" id="MS_logo"></a></div>
 
 			<div class="social-media-left">
 				<span class="leftHeader">Connect with Us:</span>
@@ -432,9 +381,10 @@ var google_conversion_label = "H21bCLKs5AMQruOO_AM"; var google_custom_params = 
 </div>
 
 </noscript>
+
 	<!-- MegaMenu -->
 <script type="text/javascript" src="/images/newUI/js/jquery-1.3.2.min.js"></script>
-<script src="http://static.complianceonline.com/images/newUI/js/jquery.megamenu.js" type="text/javascript"></script>
+<script src="http://www.complianceonline.com/images/newUI/js/jquery.megamenu.js" type="text/javascript"></script>
 <script type="text/javascript">
   jQuery(function(){
 	var SelfLocation = window.location.href.split('?');
@@ -450,9 +400,8 @@ var google_conversion_label = "H21bCLKs5AMQruOO_AM"; var google_custom_params = 
 </script>
 <!-- END -->
 
-<script type="text/javascript" src="http://static.complianceonline.com/images/newUI/js/header_footer_newUI.js"></script>
-<script type="text/javascript" src="http://static.complianceonline.com/images/newUI/js/company_info_newUI.js"></script>
-<script type="text/javascript" language="javascript" src="http://static.complianceonline.com/images/js/site/common_script.js"></script>
-
+<script type="text/javascript" src="http://www.complianceonline.com/images/newUI/js/header_footer_newUI.js"></script>
+<script type="text/javascript" src="http://www.complianceonline.com/images/newUI/js/company_info_newUI.js"></script>
+<script type="text/javascript" language="javascript" src="http://www.complianceonline.com/images/js/site/common_script.js"></script>
 
 </body></html>
