--- a/m/my/myx/myxvids.com.html
+++ b/m/my/myx/myxvids.com.html
@@ -1,32 +1,37 @@
-<!--The following is the downloaded HTML source of the myxvids.com privacy policy that was archived on 2013-08-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130808064706id_/http%3A//www.myxvids.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myxvids.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223062934id_/http%3A//www.myxvids.com/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
-	<title>Privacy Policy</title>
+<!DOCTYPE html><html lang="en"><head><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://www.myxvids.com/js/jspunder.js"></script>
+<script>
+jsPopunder('http://www.fpcpopunder.com/popunder/popunder.cgi?program=light&account=dmnetwork&track=MXV', {
+    width: 1024, 
+    height: 768
+});
+</script>	<title>Privacy Policy</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-        <link rel="shortcut icon" type="image/x-icon" href="http://cdn.myxvids.com/favicon.ico">
-	<link media="all" rel="stylesheet" type="text/css" href="http://cdn.myxvids.com/styles/all.css">
-	<link media="all" rel="stylesheet" type="text/css" href="http://cdn.myxvids.com/styles/fancybox.css">
-	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="http://www.myxvids.com/favicon.ico">
+	<link media="all" rel="stylesheet" type="text/css" href="http://www.myxvids.com/styles/all5.css">
+	<link media="all" rel="stylesheet" type="text/css" href="http://www.myxvids.com/styles/fancybox.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
 			<link href="http://www.myxvids.com/rss/" rel="alternate" type="application/rss+xml">
 	
 	
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/KernelTeamVideoSharingSystem_3.1.1.jsx"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/KernelTeamVideoSharingSystem_3.3.3.jsx"></script>
     
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/KernelTeamImageRotatorExtended_3.1.1.jsx"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/KernelTeamImageRotatorExtended_3.3.3.jsx"></script>
 	<script type="text/javascript">
 		KT_rotationEngineStartup(0.2, 0.5);
 	</script>
 	<script type="text/javascript">var addthis_config = {"data_track_clickback":true,"ui_header_background":"#252525","ui_header_color":"#fff","ui_offset_top":"-9999"};</script>
 	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js"></script>
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/jquery.placeholder.min.js"></script>
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/fancybox.js"></script>
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/jquery.ad-gallery.min.js"></script>
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/zclip.js"></script>
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/jquery.allofthelights.min.js"></script>
-	<script type="text/javascript" src="http://cdn.myxvids.com/js/main_0.0.1.jsx"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/jquery.placeholder.min.js"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/fancybox.js"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/jquery.ad-gallery.min.js"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/zclip.js"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/jquery.allofthelights.min.js"></script>
+	<script type="text/javascript" src="http://www.myxvids.com/js/main_0.0.1.jsx"></script>
 </head>
 <body id="top">
 	<div class="header">
@@ -418,11 +423,6 @@ herein, you may contact us at http://www.myxvids.com/support.php</p>
 		</div>
 	</div>
 <script type="text/javascript">
-var uid = '4159';
-var wid = '4648';
-</script>
-<script type="text/javascript" src="http://cdn.popcash.net/pop.js"></script>
-<script type="text/javascript">
 var sc_project=6629313; 
 var sc_invisible=1; 
 var sc_security="bd588db4"; 
@@ -448,4 +448,5 @@ alt="web stats"></a></div></noscript>
 
 </script>
 
+<script type="text/javascript" src="http://syndication.exoclick.com/splash.php?cat=2&amp;idsite=79657&amp;idzone=611160&amp;login=myxvids&amp;type=4"></script>
 </body></html>
