--- a/p/pe/per/persiankitty.com.html
+++ b/p/pe/per/persiankitty.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the persiankitty.com privacy policy that was archived on 2013-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131127110135id_/http%3A//www.persiankitty.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the persiankitty.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223094659id_/http%3A//persiankitty.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title> Persian Kitty 's Adult Links ! Privacy Policy</title>
